--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,5 +40,7 @@
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="16dp"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        android:contentDescription="@string/new_self_report"
+        app:srcCompat="@android:drawable/ic_menu_edit" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
