--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
     <dimen name="appbar_padding">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
+
+    <dimen name="ema_question_spacing">24dp</dimen>
+    <dimen name="ema_question_padding">12dp</dimen>
+    <dimen name="ema_question_textsize">20sp</dimen>
 </resources>
