--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple">#A020F0</color>
+    <color name="gray">#808080</color>
+    <color name="dark_gray">#444</color>
+    <color name="light_purple">#CBC3E3</color>
 </resources>
