--- a/app/src/main/res/layout/fragment_self_report.xml
+++ b/app/src/main/res/layout/fragment_self_report.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
@@ -14,60 +15,70 @@
         android:paddingBottom="@dimen/ema_box_spacing">
 
         <include
-            layout="@layout/question1_control"
+            layout="@layout/q1_control"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/ema_box_marginhorizontal"
             android:layout_marginTop="@dimen/ema_box_spacing" />
 
         <include
-            layout="@layout/question2_confident"
+            layout="@layout/q2_confident"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/ema_box_marginhorizontal"
             android:layout_marginTop="@dimen/ema_box_spacing" />
 
         <include
-            layout="@layout/question3_yourway"
+            layout="@layout/q3_yourway"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/ema_box_marginhorizontal"
             android:layout_marginTop="@dimen/ema_box_spacing" />
 
         <include
-            layout="@layout/question4_difficulties"
+            layout="@layout/q4_difficulties"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/ema_box_marginhorizontal"
             android:layout_marginTop="@dimen/ema_box_spacing" />
 
         <include
-            layout="@layout/question5_stresslvl"
+            layout="@layout/q5_stresslvl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/ema_box_marginhorizontal"
             android:layout_marginTop="@dimen/ema_box_spacing" />
 
         <include
-            layout="@layout/question6_social"
+            layout="@layout/q6_social"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/ema_box_marginhorizontal"
             android:layout_marginTop="@dimen/ema_box_spacing" />
 
         <include
-            layout="@layout/question7_location"
+            layout="@layout/q7_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/ema_box_marginhorizontal"
             android:layout_marginTop="@dimen/ema_box_spacing" />
 
         <include
-            layout="@layout/question8_activity"
+            layout="@layout/q8_activity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/ema_box_marginhorizontal"
             android:layout_marginTop="@dimen/ema_box_spacing" />
+
+        <Button
+            android:id="@+id/btnSubmit"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/ema_box_spacing"
+            android:enabled="false"
+            android:text="@string/submit"
+            app:icon="@android:drawable/ic_menu_send" />
 
     </LinearLayout>
 
