--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:labelFor="@id/etFullName"
-            android:text="Full name" />
+            android:text="@string/full_name" />
 
         <EditText
             android:id="@+id/etFullName"
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:labelFor="@id/etFullName"
-            android:text="Date of birth" />
+            android:text="@string/date_of_birth" />
 
         <EditText
             android:id="@+id/etDateOfBirth"
