--- a/app/src/main/res/layout/push_notification.xml
+++ b/app/src/main/res/layout/push_notification.xml
@@ -8,7 +8,8 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignParentStart="true"
-        android:src="@drawable/ic_stress_app" />
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/ic_self_report" />
 
     <LinearLayout
         android:layout_width="match_parent"
