--- a/app/src/main/res/layout/q1_control.xml
+++ b/app/src/main/res/layout/q1_control.xml
@@ -4,11 +4,11 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+
     <TextView
-        android:id="@+id/tvQuestion1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="1. 중요한 일을 통제할 수 없다고 느낀 적이 얼마나 자주 있습니까?"
+        android:text="1. 중요한 일들을 통제할 수 없다고 느낀 적이 얼마나 있었나요?"
         android:textColor="@color/black"
         android:textSize="@dimen/ema_question_textsize" />
 
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:text="How often have you felt that you were unable to control the important things?"
         android:textColor="@color/black"
-        android:textSize="@dimen/ema_question_textsize"/>
+        android:textSize="@dimen/ema_question_eng_textsize" />
 
     <View
         android:layout_width="match_parent"
