--- a/app/src/main/res/layout/q4_difficulties.xml
+++ b/app/src/main/res/layout/q4_difficulties.xml
@@ -7,10 +7,16 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/q4_pss_difficulties"
+        android:text="4. 어려운 일이 너무 많이 쌓여서 극복할 수 없다고 느낀적이 얼마나 있었나요?"
         android:textColor="@color/black"
         android:textSize="@dimen/ema_question_textsize" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="How often did you feel that difficulties were piling up so high that you could not overcome them?"
+        android:textColor="@color/black"
+        android:textSize="@dimen/ema_question_eng_textsize" />
 
     <View
         android:layout_width="match_parent"
