PSS-4 questions taken from microEMA

--- a/app/src/main/res/layout/q1_control.xml
+++ b/app/src/main/res/layout/q1_control.xml
@@ -8,14 +8,14 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="1. 중요한 일들을 통제할 수 없다고 느낀 적이 얼마나 있었나요?"
+        android:text="1. 중요한 일들을 통제할 수 없다고 느낀 적이 있었나요?"
         android:textColor="@color/black"
         android:textSize="@dimen/ema_question_textsize" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="How often have you felt that you were unable to control the important things?"
+        android:text="Did you feel you could not control important things?"
         android:textColor="@color/black"
         android:textSize="@dimen/ema_question_eng_textsize" />
 
