--- a/app/src/main/res/layout/q3_yourway.xml
+++ b/app/src/main/res/layout/q3_yourway.xml
@@ -7,14 +7,14 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="3. 자신의 뜻대로 일이 진행된다고 느낀 적이 얼마나 있었나요?"
+        android:text="3. 자신의 뜻대로 일이 진행된다고 느낀 적이 있었나요?"
         android:textColor="@color/black"
         android:textSize="@dimen/ema_question_textsize" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="How often did you feel that things were going your way?"
+        android:text="Did you feel things are going your way?"
         android:textColor="@color/black"
         android:textSize="@dimen/ema_question_eng_textsize" />
 
