calendar problem - cannot get all events

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,6 +7,7 @@
     tools:context=".ui.MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/Theme.StressDataCollector.AppBarOverlay">
@@ -20,17 +21,91 @@
             android:padding="@dimen/appbar_padding"
             android:text="@string/app_name"
             android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/view_pager"
+    <ScrollView
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:layout_below="@id/appbar">
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/ema_box_spacing">
+
+            <!--        PSS-4 Korean version taken from https://www.cmu.edu/dietrich/psychology/stress-immunity-disease-lab/scales/pdf/pss_10_korean.pdf-->
+
+            <include
+                layout="@layout/q1_control"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/ema_box_marginhorizontal"
+                android:layout_marginTop="@dimen/ema_box_spacing" />
+
+            <include
+                layout="@layout/q2_confident"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/ema_box_marginhorizontal"
+                android:layout_marginTop="@dimen/ema_box_spacing" />
+
+            <include
+                layout="@layout/q3_yourway"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/ema_box_marginhorizontal"
+                android:layout_marginTop="@dimen/ema_box_spacing" />
+
+            <include
+                layout="@layout/q4_difficulties"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/ema_box_marginhorizontal"
+                android:layout_marginTop="@dimen/ema_box_spacing" />
+
+            <include
+                layout="@layout/q5_stresslvl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/ema_box_marginhorizontal"
+                android:layout_marginTop="@dimen/ema_box_spacing" />
+
+            <include
+                layout="@layout/q6_social"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/ema_box_marginhorizontal"
+                android:layout_marginTop="@dimen/ema_box_spacing" />
+
+            <include
+                layout="@layout/q7_location"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/ema_box_marginhorizontal"
+                android:layout_marginTop="@dimen/ema_box_spacing" />
+
+            <include
+                layout="@layout/q8_activity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/ema_box_marginhorizontal"
+                android:layout_marginTop="@dimen/ema_box_spacing" />
+
+            <Button
+                android:id="@+id/btnSubmit"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/ema_box_spacing"
+                android:enabled="false"
+                android:text="@string/submit"
+                app:icon="@android:drawable/ic_menu_send" />
+
+        </LinearLayout>
+
+    </ScrollView>
+
+</RelativeLayout>
