--- a/app/src/main/res/layout/q1_control.xml
+++ b/app/src/main/res/layout/q1_control.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="1. 중요한 일들을 통제할 수 없다고 느낀 적이 있었나요?"
+        android:text="1. 중요한 일들을 통제할 수 없다고 느꼈나요?"
         android:textSize="@dimen/ema_question_textsize" />
 
     <TextView
