--- a/app/src/main/res/layout/q4_difficulties.xml
+++ b/app/src/main/res/layout/q4_difficulties.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="4. 어려운 일이 너무 많이 쌓여서 극복할 수 없다고 느낀적이 있었나요?"
+        android:text="4. 어려운 일이 너무 많이 쌓여서 극복할 수 없다고 느꼈나요?"
         android:textSize="@dimen/ema_question_textsize" />
 
     <TextView
